--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -215,7 +215,7 @@
     "# load the pt-pt json file into a dataframe\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_json('1.1/data/en-US.jsonl', lines=True)\n",
+    "df = pd.read_json('dataset/en-US.jsonl', lines=True)\n",
     "df"
    ]
   },
@@ -488,6 +488,16 @@
     "print(f\"Precision: {precision_score(y_dev, y_pred, average='macro')}\")\n",
     "print(f\"Recall: {recall_score(y_dev, y_pred, average='macro')}\")\n",
     "print(f\"F1: {f1_score(y_dev, y_pred, average='macro')}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Baseline\n",
+    "\n",
+    "The baseline results are 0.6163 for the F1-macro score."
    ]
   }
  ],
