--- a/exploratory_analysis.ipynb
+++ b/exploratory_analysis.ipynb
@@ -215,7 +215,7 @@
     "# load the pt-pt json file into a dataframe\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_json('1.1/data/en-US.jsonl', lines=True)\n",
+    "df = pd.read_json('dataset/en-US.jsonl', lines=True)\n",
     "df"
    ]
   },
@@ -492,13 +492,6 @@
    "source": [
     "df[df['id'] == 13760]['utt'].values"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
