--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,12 @@
       "\n",
       "\n",
       "Accuracy: 0.9252143552945035\n",
-      "F1: 0.9218056976937392\n"
+      "F1: 0.9218056976937392\n",
+      "-----General Results-----\n",
+      "\n",
+      "\n",
+      "Accuracy: 0.5733610907355857\n",
+      "F1: 0.5035775201015295\n"
      ]
     }
    ],
@@ -675,7 +680,12 @@
     "print(f\"-----Results for locales-----\\n\\n\")\n",
     "# accuracy, precision, recall, f1\n",
     "print(f\"Accuracy: {accuracy_score(y_dev_locales, y_pred_locales)}\")\n",
-    "print(f\"F1: {f1_score(y_dev_locales, y_pred_locales, average='macro')}\")"
+    "print(f\"F1: {f1_score(y_dev_locales, y_pred_locales, average='macro')}\")\n",
+    "\n",
+    "print(f\"-----General Results-----\\n\\n\")\n",
+    "# accuracy, precision, recall, f1\n",
+    "print(f\"Accuracy: {accuracy_score(y_dev_intents, y_pred_intents)*accuracy_score(y_dev_locales, y_pred_locales)}\")\n",
+    "print(f\"F1: {f1_score(y_dev_intents, y_pred_intents, average='macro')*f1_score(y_dev_locales, y_pred_locales, average='macro')}\")"
    ]
   },
   {
