--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -6,209 +6,61 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>locale</th>\n",
-       "      <th>partition</th>\n",
-       "      <th>scenario</th>\n",
-       "      <th>intent</th>\n",
-       "      <th>utt</th>\n",
-       "      <th>annot_utt</th>\n",
-       "      <th>worker_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>en-US</td>\n",
-       "      <td>test</td>\n",
-       "      <td>alarm</td>\n",
-       "      <td>alarm_set</td>\n",
-       "      <td>wake me up at five am this week</td>\n",
-       "      <td>wake me up at [time : five am] [date : this week]</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>en-US</td>\n",
-       "      <td>train</td>\n",
-       "      <td>alarm</td>\n",
-       "      <td>alarm_set</td>\n",
-       "      <td>wake me up at nine am on friday</td>\n",
-       "      <td>wake me up at [time : nine am] on [date : friday]</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>en-US</td>\n",
-       "      <td>train</td>\n",
-       "      <td>alarm</td>\n",
-       "      <td>alarm_set</td>\n",
-       "      <td>set an alarm for two hours from now</td>\n",
-       "      <td>set an alarm for [time : two hours from now]</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>en-US</td>\n",
-       "      <td>test</td>\n",
-       "      <td>audio</td>\n",
-       "      <td>audio_volume_mute</td>\n",
-       "      <td>quiet</td>\n",
-       "      <td>quiet</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>en-US</td>\n",
-       "      <td>train</td>\n",
-       "      <td>audio</td>\n",
-       "      <td>audio_volume_mute</td>\n",
-       "      <td>olly quiet</td>\n",
-       "      <td>olly quiet</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16516</th>\n",
-       "      <td>17176</td>\n",
-       "      <td>en-US</td>\n",
-       "      <td>train</td>\n",
-       "      <td>email</td>\n",
-       "      <td>email_query</td>\n",
-       "      <td>do i have emails</td>\n",
-       "      <td>do i have emails</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16517</th>\n",
-       "      <td>17177</td>\n",
-       "      <td>en-US</td>\n",
-       "      <td>train</td>\n",
-       "      <td>email</td>\n",
-       "      <td>email_query</td>\n",
-       "      <td>what emails are new</td>\n",
-       "      <td>what emails are new</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16518</th>\n",
-       "      <td>17178</td>\n",
-       "      <td>en-US</td>\n",
-       "      <td>train</td>\n",
-       "      <td>email</td>\n",
-       "      <td>email_query</td>\n",
-       "      <td>do i have new emails from john</td>\n",
-       "      <td>do i have new emails from [person : john]</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16519</th>\n",
-       "      <td>17179</td>\n",
-       "      <td>en-US</td>\n",
-       "      <td>test</td>\n",
-       "      <td>email</td>\n",
-       "      <td>email_query</td>\n",
-       "      <td>has john sent me an email</td>\n",
-       "      <td>has [person : john] sent me an email</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16520</th>\n",
-       "      <td>17180</td>\n",
-       "      <td>en-US</td>\n",
-       "      <td>train</td>\n",
-       "      <td>email</td>\n",
-       "      <td>email_query</td>\n",
-       "      <td>check email from john</td>\n",
-       "      <td>check email from [person : john]</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>16521 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          id locale partition scenario             intent  \\\n",
-       "0          0  en-US      test    alarm          alarm_set   \n",
-       "1          1  en-US     train    alarm          alarm_set   \n",
-       "2          2  en-US     train    alarm          alarm_set   \n",
-       "3          3  en-US      test    audio  audio_volume_mute   \n",
-       "4          4  en-US     train    audio  audio_volume_mute   \n",
-       "...      ...    ...       ...      ...                ...   \n",
-       "16516  17176  en-US     train    email        email_query   \n",
-       "16517  17177  en-US     train    email        email_query   \n",
-       "16518  17178  en-US     train    email        email_query   \n",
-       "16519  17179  en-US      test    email        email_query   \n",
-       "16520  17180  en-US     train    email        email_query   \n",
-       "\n",
-       "                                       utt  \\\n",
-       "0          wake me up at five am this week   \n",
-       "1          wake me up at nine am on friday   \n",
-       "2      set an alarm for two hours from now   \n",
-       "3                                    quiet   \n",
-       "4                               olly quiet   \n",
-       "...                                    ...   \n",
-       "16516                     do i have emails   \n",
-       "16517                  what emails are new   \n",
-       "16518       do i have new emails from john   \n",
-       "16519            has john sent me an email   \n",
-       "16520                check email from john   \n",
-       "\n",
-       "                                               annot_utt  worker_id  \n",
-       "0      wake me up at [time : five am] [date : this week]          1  \n",
-       "1      wake me up at [time : nine am] on [date : friday]          1  \n",
-       "2           set an alarm for [time : two hours from now]          1  \n",
-       "3                                                  quiet          1  \n",
-       "4                                             olly quiet          1  \n",
-       "...                                                  ...        ...  \n",
-       "16516                                   do i have emails         12  \n",
-       "16517                                what emails are new         12  \n",
-       "16518          do i have new emails from [person : john]         12  \n",
-       "16519               has [person : john] sent me an email         12  \n",
-       "16520                   check email from [person : john]         12  \n",
-       "\n",
-       "[16521 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Added af-ZA.jsonl to dataframe\n",
+      "Added am-ET.jsonl to dataframe\n",
+      "Added ar-SA.jsonl to dataframe\n",
+      "Added az-AZ.jsonl to dataframe\n",
+      "Added bn-BD.jsonl to dataframe\n",
+      "Added cy-GB.jsonl to dataframe\n",
+      "Added da-DK.jsonl to dataframe\n",
+      "Added de-DE.jsonl to dataframe\n",
+      "Added el-GR.jsonl to dataframe\n",
+      "Added en-US.jsonl to dataframe\n",
+      "Added es-ES.jsonl to dataframe\n",
+      "Added fa-IR.jsonl to dataframe\n",
+      "Added fi-FI.jsonl to dataframe\n",
+      "Added fr-FR.jsonl to dataframe\n",
+      "Added he-IL.jsonl to dataframe\n",
+      "Added hi-IN.jsonl to dataframe\n",
+      "Added hu-HU.jsonl to dataframe\n",
+      "Added hy-AM.jsonl to dataframe\n",
+      "Added id-ID.jsonl to dataframe\n",
+      "Added is-IS.jsonl to dataframe\n",
+      "Added it-IT.jsonl to dataframe\n",
+      "Added ja-JP.jsonl to dataframe\n",
+      "Added jv-ID.jsonl to dataframe\n",
+      "Added ka-GE.jsonl to dataframe\n",
+      "Added km-KH.jsonl to dataframe\n",
+      "Added kn-IN.jsonl to dataframe\n",
+      "Added ko-KR.jsonl to dataframe\n",
+      "Added lv-LV.jsonl to dataframe\n",
+      "Added ml-IN.jsonl to dataframe\n",
+      "Added mn-MN.jsonl to dataframe\n",
+      "Added ms-MY.jsonl to dataframe\n",
+      "Added my-MM.jsonl to dataframe\n",
+      "Added nb-NO.jsonl to dataframe\n",
+      "Added nl-NL.jsonl to dataframe\n",
+      "Added pl-PL.jsonl to dataframe\n",
+      "Added pt-PT.jsonl to dataframe\n",
+      "Added ro-RO.jsonl to dataframe\n",
+      "Added ru-RU.jsonl to dataframe\n",
+      "Added sl-SL.jsonl to dataframe\n",
+      "Added sq-AL.jsonl to dataframe\n",
+      "Added sv-SE.jsonl to dataframe\n",
+      "Added sw-KE.jsonl to dataframe\n",
+      "Added ta-IN.jsonl to dataframe\n",
+      "Added te-IN.jsonl to dataframe\n",
+      "Added th-TH.jsonl to dataframe\n",
+      "Added tl-PH.jsonl to dataframe\n",
+      "Added tr-TR.jsonl to dataframe\n",
+      "Added ur-PK.jsonl to dataframe\n",
+      "Added vi-VN.jsonl to dataframe\n",
+      "Added zh-CN.jsonl to dataframe\n",
+      "Added zh-TW.jsonl to dataframe\n"
+     ]
     }
    ],
    "source": [
@@ -220,7 +72,9 @@
     "\n",
     "for json_file in os.listdir('dataset'):\n",
     "    df = pd.concat([df, pd.read_json('dataset/' + json_file, lines=True)])\n",
-    "    print(f\"Added {json_file} to dataframe\")"
+    "    print(f\"Added {json_file} to dataframe\")\n",
+    "\n",
+    "df['locale'] = df['locale'].apply(lambda x: x.split('-')[0])"
    ]
   },
   {
@@ -247,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4
  },
