--- a/preprocess_lang.ipynb
+++ b/preprocess_lang.ipynb
@@ -8,7 +8,6 @@
    "source": [
     "import pandas as pd\n",
     "from nltk.stem import SnowballStemmer\n",
-    "from nltk.tokenize import word_tokenize\n",
     "import stopwordsiso as sw\n",
     "\n",
     "LANG_MAP = {\n",
@@ -36,13 +35,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class NoStemmer:\n",
+    "    def __init__(self, lang):\n",
+    "        self.lang = lang\n",
+    "\n",
+    "    def stem(self, word):\n",
+    "        return word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_stemmer(locale: str):\n",
     "    \"\"\"\n",
     "    Returns the approprate stemmer, if one exists\n",
     "    \"\"\"\n",
     "    if locale in LANG_MAP:\n",
     "        return SnowballStemmer(LANG_MAP[locale])\n",
-    "    return lambda x: x"
+    "    return NoStemmer(locale)"
    ]
   },
   {
@@ -51,11 +64,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def stem(stemmer, utterance: str) -> str:\n",
+    "def stem(stemmer, utterance: str):\n",
     "    \"\"\"\n",
     "    Stems the utterance after tokenizing it\n",
     "    \"\"\"\n",
-    "    return \" \".join([stemmer.stem(token) for token in word_tokenize(utterance)])"
+    "    if isinstance(utterance, str):\n",
+    "        raise TypeError(\"Utterance must be tokenized to be stemmed.\")\n",
+    "    return [stemmer.stem(token) for token in utterance]"
    ]
   },
   {
@@ -64,13 +79,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def apply_stemming(data: pd.DataFrame) -> pd.DataFrame:\n",
+    "def apply_stemming(data: pd.DataFrame):\n",
     "    \"\"\"\n",
     "    Apply stemming when there is a language available\n",
     "    \"\"\"\n",
-    "    return data.assign(\n",
-    "        utt=data.apply(lambda x: stem(get_stemmer(x[\"locale\"]), x[\"utt\"]), axis=1)\n",
-    "    )\n"
+    "    # stem the utt column according to the language given by the locale column\n",
+    "    data[\"utt\"] = data.apply(lambda row: stem(get_stemmer(row[\"locale\"]), row[\"utt\"]), axis=1)\n",
+    "    return data"
    ]
   },
   {
