--- a/preprocess_nolang.ipynb
+++ b/preprocess_nolang.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from polyglot.text import Text"
+    "from polyglot.text import Text\n",
+    "from IPython.utils import io"
    ]
   },
   {
@@ -42,8 +43,9 @@
     "\n",
     "def tokenize(df):\n",
     "    \"\"\"Tokenize text\"\"\"\n",
-    "    df['utt_text'] = df['utt'].apply(lambda x: Text(x))\n",
-    "    df['utt'] = df['utt_text'].apply(lambda x: x.words)\n",
+    "    with io.capture_output() as captured:\n",
+    "        df['utt_text'] = df['utt'].apply(lambda x: Text(x))\n",
+    "        df['utt'] = df['utt_text'].apply(lambda x: x.words)\n",
     "    return df"
    ]
   }
