Simplify language preprocessing

--- a/preprocess_lang.ipynb
+++ b/preprocess_lang.ipynb
@@ -6,9 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections.abc import Callable\n",
     "import pandas as pd\n",
-    "from nltk.stem import SnowballStemmer\n",
     "import stopwordsiso as sw\n",
+    "from nltk.stem import SnowballStemmer\n",
     "\n",
     "LANG_MAP = {\n",
     "    \"ar\": \"arabic\",\n",
@@ -35,27 +36,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class NoStemmer:\n",
-    "    def __init__(self, lang):\n",
-    "        self.lang = lang\n",
-    "\n",
-    "    def stem(self, word):\n",
-    "        return word"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_stemmer(locale: str):\n",
+    "def get_stemmer(locale: str) -> Callable[[str], str]:\n",
     "    \"\"\"\n",
-    "    Returns the approprate stemmer, if one exists\n",
+    "    Returns the appropriate stemmer, if one exists\n",
     "    \"\"\"\n",
     "    if locale in LANG_MAP:\n",
-    "        return SnowballStemmer(LANG_MAP[locale])\n",
-    "    return NoStemmer(locale)"
+    "        return SnowballStemmer(LANG_MAP[locale]).stem\n",
+    "    return lambda x: x"
    ]
   },
   {
@@ -64,13 +51,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def stem(stemmer, utterance: str):\n",
+    "def stem(stemmer: Callable[[str], str], utterance: list[str]) -> list[str]:\n",
     "    \"\"\"\n",
     "    Stems the utterance after tokenizing it\n",
     "    \"\"\"\n",
     "    if isinstance(utterance, str):\n",
     "        raise TypeError(\"Utterance must be tokenized to be stemmed.\")\n",
-    "    return [stemmer.stem(token) for token in utterance]"
+    "    return [stemmer(token) for token in utterance]"
    ]
   },
   {
@@ -79,12 +66,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def apply_stemming(data: pd.DataFrame):\n",
+    "def apply_stemming(data: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Apply stemming when there is a language available\n",
     "    \"\"\"\n",
     "    # stem the utt column according to the language given by the locale column\n",
-    "    data[\"utt\"] = data.apply(lambda row: stem(get_stemmer(row[\"locale\"]), row[\"utt\"]), axis=1)\n",
+    "    data[\"utt\"] = data.apply(\n",
+    "        lambda row: stem(get_stemmer(row[\"locale\"]), row[\"utt\"]), axis=1\n",
+    "    )\n",
     "    return data"
    ]
   },
@@ -94,18 +83,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def remove_stopwords(df):\n",
+    "def remove_stopwords(data: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"Remove stopwords from text\"\"\"\n",
     "    # if there's no utt_text column, raise an exception\n",
-    "    if 'utt_text' not in df.columns:\n",
-    "        raise Exception('It\\'s not possible to remove stopwords without tokenizing first.')\n",
-    "    \n",
+    "    if \"utt_text\" not in data.columns:\n",
+    "        raise Exception(\n",
+    "            \"It's not possible to remove stopwords without tokenizing first.\"\n",
+    "        )\n",
+    "\n",
     "    # for each utt, get stopword list according to locale, and remove stopwords\n",
-    "    for locale in df['locale'].unique():\n",
+    "    for locale in data[\"locale\"].unique():\n",
     "        sw_list = sw.stopwords(locale)\n",
     "        # for each utt in locale, remove stopwords\n",
-    "        df.loc[df['locale'] == locale, 'utt'] = df.loc[df['locale'] == locale, 'utt'].apply(lambda x: [word for word in x if word not in sw_list])\n",
-    "    return df"
+    "        data.loc[data[\"locale\"] == locale, \"utt\"] = data.loc[\n",
+    "            data[\"locale\"] == locale, \"utt\"\n",
+    "        ].apply(lambda x: [word for word in x if word not in sw_list])\n",
+    "    return data"
    ]
   }
  ],
