Remove extra columns from dataset

--- a/preprocess_nolang.ipynb
+++ b/preprocess_nolang.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from polyglot.text import Text\n",
-    "from IPython.utils import io"
+    "from IPython.utils import io\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -16,10 +17,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def remove_punctuation(df):\n",
+    "def remove_punctuation(data: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"Remove punctuation from text\"\"\"\n",
-    "    df['utt'] = df['utt'].str.replace('[^\\w\\s]','')\n",
-    "    return df"
+    "    data[\"utt\"] = data[\"utt\"].str.replace(r\"[^\\w\\s]\",\"\", regex=True)\n",
+    "    return data"
    ]
   },
   {
@@ -28,10 +29,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def lowercase(df):\n",
+    "def lowercase(data: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"Lowercase text\"\"\"\n",
-    "    df['utt'] = df['utt'].str.lower()\n",
-    "    return df"
+    "    data[\"utt\"] = data[\"utt\"].str.lower()\n",
+    "    return data"
    ]
   },
   {
@@ -40,13 +41,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "def tokenize(df):\n",
+    "def tokenize(data: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"Tokenize text\"\"\"\n",
     "    with io.capture_output() as captured:\n",
-    "        df['utt_text'] = df['utt'].apply(lambda x: Text(x))\n",
-    "        df['utt'] = df['utt_text'].apply(lambda x: x.words)\n",
-    "    return df"
+    "        data[\"utt_text\"] = data[\"utt\"].apply(Text)\n",
+    "        data[\"utt\"] = data[\"utt_text\"].apply(lambda x: x.words)\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def drop_cols(data: pd.DataFrame) -> pd.DataFrame:\n",
+    "    drop = [\"worker_id\", \"slot_method\", \"judgments\"]\n",
+    "    return data.drop(drop, axis=1)"
    ]
   }
  ],
