Add word embeddings ipynb

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -325,42 +325,11 @@
     "    evaluate_model(clf, testing_inputs, testing_classes, output_cols, sample_weight=sample_weight)\n",
     "    return resclf.best_estimator_['model']\n",
     "\n",
-    "def predict_model(model, transformed = False):\n",
+    "def train_and_use_model(model, params, scoring=f1_score, n_iter=None, sample_weight=None, random_state=42, plot_roc=True, oversample=False):\n",
     "    \"\"\"\n",
     "    A more convenient wrapper around train_and_evaluate, albeit less general.\n",
     "    \"\"\"\n",
-    "    inputs = competition[input_cols].values\n",
-    "    results = competition[['Id', 'Predicted']].copy()\n",
-    "    if (transformed):\n",
-    "        inputs = competition_transformed[input_cols].values\n",
-    "        results = competition_transformed[['Id', 'Predicted']].copy()\n",
-    "    \n",
-    "    results['Predicted'] = (model.predict_proba(inputs))[:, 1]\n",
-    "    modelname = f'{datetime.datetime.now().strftime(\"%Y_%m_%d_T%HH_%MM_%SS\")}_{model.__class__.__name__}_results'\n",
-    "    results.to_csv(f'output/predictive/{modelname}.csv', index=False)\n",
-    "    return model\n",
-    "\n",
-    "def train_and_use_model(model, params, scoring=f1_score, n_iter=None, sample_weight=None, random_state=42, plot_roc=True, transformed = False, oversample=False):\n",
-    "    \"\"\"\n",
-    "    A more convenient wrapper around train_and_evaluate, albeit less general.\n",
-    "    \"\"\"\n",
-    "    clf = train_and_evaluate(input_cols, output_cols, model, params, sample_weight=sample_weight, n_iter=n_iter, random_state=random_state, scoring=scoring, plot_roc=plot_roc, oversample=oversample)\n",
-    "    return predict_model(clf, transformed = transformed)\n",
-    "\n",
-    "def use_model(clf, oversample = False, transformed = False):\n",
-    "    inputs = data[input_cols].values\n",
-    "    classes = data[output_cols].values\n",
-    "    \n",
-    "    if (transformed):\n",
-    "        inputs = data_transformed[input_cols].values\n",
-    "        classes = data_transformed[output_cols].values\n",
-    "    \n",
-    "    if (oversample):\n",
-    "        resampler = SMOTETomek(tomek=TomekLinks(sampling_strategy='majority'))\n",
-    "        inputs, classes = resampler.fit_resample(inputs, classes)\n",
-    "    \n",
-    "    clf.fit(inputs, classes)\n",
-    "    return predict_model(clf, transformed=transformed)"
+    "    return train_and_evaluate(input_cols, output_cols, model, params, sample_weight=sample_weight, n_iter=n_iter, random_state=random_state, scoring=scoring, plot_roc=plot_roc, oversample=oversample)\n"
    ]
   }
  ],
